# searching-for-flights

./: README.md  flights.json  main.py  pyproject.toml
application/usecases/: searches_for_flights.py
domain/entities/: flight.py
infrastructure/: base_browser.py  browser.py  browser_service.py  config_browser.py  data_parser.py  error_handler.py
infrastructure/schemas/: search.py
settings/: containers.py
